--- a/.github/workflows/control.yml
+++ b/.github/workflows/control.yml
@@ -75,3 +75,12 @@ jobs:
         run: ls
       - name: Deploy
         run: echo "Deploying..."
+  report: #this job will run if any of the jobs fail
+    needs: [lint, deploy]
+    if: failure()
+    runs-on: ubuntu-latest
+    steps:
+      - name: output information
+        run: |
+          echo "something get wrong"
+          echo "${{ toJSON(github) }}"
