--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -7,6 +7,9 @@ jobs:
       matrix:
         node-verion: [12, 13, 14]
         operating-system: [ubuntu-latest, windows-latest]
+        include:
+          - node-verion: 18
+            operating-system: ubuntu-latest
     runs-on: ${{ matrix.operating-system }}
     steps:
       - name: get code
