--- a/.github/workflows/reuseable.yml
+++ b/.github/workflows/reuseable.yml
@@ -6,6 +6,7 @@ on:
         description: The name of thedeployabke artifact files
         required: false
         default: dist
+        type: string
 jobs:
   deploy:
     runs-on: ubuntu-latest
