reuse with artifact

--- a/.github/workflows/reuseable.yml
+++ b/.github/workflows/reuseable.yml
@@ -1,6 +1,6 @@
 name: reusable demo
 on:
-  workflow-call:
+  workflow_call:
     inputs:
       artifact-name:
         description: The name of thedeployabke artifact files
