--- a/.github/workflows/reuseable.yml
+++ b/.github/workflows/reuseable.yml
@@ -7,8 +7,19 @@ on:
         required: false
         default: dist
         type: string
+    outputs:
+      result:
+        description: the result of deployment operation
+        value: ${{ jobs.deploy.ouputs.outcome}}
+    #secrets:
+    #something:
+    #required:
+    #default:
+    #type:
 jobs:
   deploy:
+    outputs:
+      outcome: ${{ steps.set-result.outputs.step-sresult}}
     runs-on: ubuntu-latest
     steps:
       - name: get code
@@ -17,3 +28,6 @@ jobs:
           name: ${{ inputs.artifact-name }}
       - name: output information
         run: echo "Deploying & uploading..."
+      - name: get result output
+        id: set-result
+        run: echo "set-result=success"
