--- a/.github/workflows/reuseable.yml
+++ b/.github/workflows/reuseable.yml
@@ -19,7 +19,7 @@ on:
 jobs:
   deploy:
     outputs:
-      outcome: ${{ steps.set-result.outputs.step-sresult}}
+      outcome: ${{ steps.set-result.outputs.step-result}}
     runs-on: ubuntu-latest
     steps:
       - name: get code
@@ -30,4 +30,4 @@ jobs:
         run: echo "Deploying & uploading..."
       - name: get result output
         id: set-result
-        run: echo "set-result=success"
+        run: echo "step-result=success"
