--- a/.github/workflows/reuseable.yml
+++ b/.github/workflows/reuseable.yml
@@ -10,7 +10,7 @@ on:
     outputs:
       result:
         description: the result of deployment operation
-        value: ${{ jobs.deploy.ouputs.outcome}}
+        value: ${{ jobs.deploy.outputs.outcome}}
     #secrets:
     #something:
     #required:
