--- a/.github/workflows/reuseable.yml
+++ b/.github/workflows/reuseable.yml
@@ -30,4 +30,4 @@ jobs:
         run: echo "Deploying & uploading..."
       - name: get result output
         id: set-result
-        run: echo "step-result=success"
+        run: echo "step-result=success" >> $GITHUB_OUTPUT
